--- a/mysite/assets/scss/modules/sidemenu/_main.scss
+++ b/mysite/assets/scss/modules/sidemenu/_main.scss
@@ -13,15 +13,19 @@ $right-pad: 20px;
   }
 
   &__program-title {
-    margin-top: 10px;
+    margin-top: 11px;
     margin-left: $left-pad;
     width: $max-sidemenu-width / 2;
     background-color: palette-get(na-white);
-    padding: 7px 7px 1.5px 7px;
+    padding: 7px 5px 0px 7px;
     float:left;
+
     &__title {
-      font-size:13px;
+      font-size:15px;
+      line-height:16px;
       font-color:palette-get(na-black);
+      font-family: "Platform"; 
+      font-weight: bold;
       /*padding-left: $left-pad;*/
     }
   }
@@ -41,15 +45,18 @@ $right-pad: 20px;
   top: 0;
   background-color: palette-get(na-black);
   width: 100%;
-  height:100%;
+ /* height:100%;*/
   z-index: 1000;
   font-color:palette-get(na-white);
   padding-top: 15px;
+  padding-bottom: 15px;
   display:none;
+  /*overflow:scroll;*/
+  background-color: palette-get(na-black);
   /*padding-left: 20px;*/
 
   @include desktop-sidemenu {
-    display:block;
+    display:table-cell;
     /*margin-top: 20px;*/
   }
 
@@ -73,8 +80,8 @@ $right-pad: 20px;
       font-size: 17px; 
       line-height: 18px; 
       padding-top: 1px;  
-      /*top: 50%; 
-      transform: translateY(-50%);*/
+      top: 50%; 
+      transform: translateY(-50%);
     }
   }
 
